# ContextFlow

./: CHANGELOG.md  README.md  advanced_modes.py  agent_integration.py  benchmarks.py  budget.py  compression.py  config.py  interfaces.py  memory.py  metrics.py  mode.py  pipeline.py  provider.py  pyproject.toml  requirements.txt  setup.py  sources.py  test_core.py  test_error.txt  test_error2.txt  test_output.txt  test_registry.py  test_result.txt  test_v06_nodes.py
benchmarks/: benchmark.py
contextflow/: __init__.py  advanced_modes.py  agent_integration.py  benchmarks.py  budget.py  compression.py  config.py  interfaces.py  memory.py  metrics.py  mode.py  pipeline.py  provider.py  schema.py  sources.py
contextflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contextflow/budget/: __init__.py
contextflow/cache/: __init__.py  store.py
contextflow/compression/: __init__.py
contextflow/core/: interfaces.py  registry.py
contextflow/memory/: __init__.py
contextflow/metrics/: __init__.py
contextflow/mode/: __init__.py
contextflow/pipeline/: __init__.py  trace.py
contextflow/provider/: __init__.py
contextflow/ranking/: __init__.py  scorer.py
contextflow/session/: __init__.py  state.py
docs/: ANALYSIS.md  ARCHITECTURE.md  COMPRESSION.md  IMPLEMENTATION_PLAN.md  INTERFACES.md  MESSAGE_SCHEMA.md  METRICS.md  MODES.md  PIPELINE.md  PROVIDER.md  ROADMAP.md  TOKENIZATION.md  USAGE.md  cache.md  config.md  engine.md  plugins.md
examples/: agent_session.py  demo.py  langgraph_agent.py  v0.6_semantic_distillation.py
(+1 files in other folders)
