[project]
name = "contextflow"
version = "0.5.0"
description = "Context engineering pipeline for LLM systems"
authors = [{ name = "studentleaner" }]
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.7.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points."contextflow.plugins.mode"]
mock_external_mode = "contextflow.advanced_modes:AgentMode"
